# mytral

./: .gitignore  CHANGELOG.md  CONTRIBUTE.md  CREDITS.md  INSTALLATION.md  KNOWN_ISSUES.md  LICENSE  Makefile  PAD.xml  README.md  pyproject.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.md  enhancement.md  feature.md
.github/workflows/: distro-flatpak.yml  distro-snap.yml  distro-tarball.yml  distro-win.yml  python-lint.yml  python-tests.yml  release-win.yml.SKIP
docs/: .FEATURE_TEMPLATE.md  ABOUT.md  ANALYSIS_TASKS.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CREDITS.md  DIGITALIZATION.md  FEATURE_3D_IRM_METRIC_SUITE.md  FEATURE_ANALYSIS_METRICS_SET_OR_ESTIMATE.md  FEATURE_DATASETS.md  FEATURE_GPC_3D.md  FEATURE_GPX_2D.md  FEATURE_METRICS.md  FEATURE_WINGET.md  INDEX.md  INSTALLATION.md  LICENSE.md  LICENSES.md  METRICS.banister.md  METRICS.md  NORMALIZATION.md  SHARING.md  _SITEMAP.md  _SITEMAP_ALL.md  _SITEMAP_WWW.md
docs/mannequin-proposals/: proposal-1-anatomical-atlas.html  proposal-2-anatomical-heatmap.html  proposal-3-interactive-picker.html
flatpak/: fitness.mytral.Mytral.desktop  fitness.mytral.Mytral.metainfo.xml  fitness.mytral.Mytral.yaml
licenses/: anthropic.txt  babylonjs.txt  bokeh.txt  boto3.txt  cryptography.txt  defusedxml.txt  email-validator.txt  fit-tool.txt  flask-cors.txt  flask-license.txt  flask-wtf.txt  font-awesome.txt  leaflet.txt  minio.txt  msgpack.txt  openstreetmap.txt  pandas.txt  pillow.txt  polars.txt  react-native-body-highlighter.txt  requests.txt  scikit-learn.txt  srtm.txt  tabler-hotwired-turbo.txt  tabpfn.txt  w3.css.txt  wtforms.txt  xgboost-cpu.txt
licenses/tooling/: inno-setup.txt  pytest.txt
make/: .secrets.baseline  d_production_data_pull.sh  d_production_data_push.sh  distro_pad_refresh.py  generate_docs_from_markdown.py  generate_public_docs.py  preprocess_license_to_markdown.py  preprocess_licenses_to_markdown.py
make/anatomy/: build_anatomy.py
media/banners/: make_banners.py
mytral/: __init__.py  anatomy.py  athlete_metrics.py  bootstraps.py  cals.py  charts.py  cli.py  commons.py  config.py  ext.py  forms.py  insights.py  loggers.py  migrations.py  muscle_groups.py  ninjas.py  onboarding.py  parsers.py  persistences.py  plugins.py  profilers.py  releng.py  routes.py  run.py  run_desktop.py  security.py  settings.py  stats.py  tools.py  utils.py  version.py  views.py
mytral/ai/: __init__.py  acoaches.py  agent.py  context.py  providers.py  settings.py
mytral/backends/: __init__.py  cache.py  dataset.py  entities.py
mytral/blobstore/: __init__.py  _object_store_utils.py  abc.py  activity_service.py  avatar_service.py  entity_photo_service.py  exceptions.py  filesystem.py  image_processing.py  minio_store.py  models.py  s3_store.py  validation.py
mytral/blueprints/: acoach_uri_space.py  activity_types_crud.py  auth_uri_space.py  component_templates_crud.py  deployment_crud.py  exercise_types_crud.py  export_uri_space.py  gear_components_crud.py  gear_crud.py  goal_crud.py  gpx_terrain_views.py  health_uri_space.py  import_uri_space.py  irm3d_uri_space.py  lap_types_crud.py  maps_uri_space.py  outfit_crud.py  strava_api_uri_space.py  symptom_types_crud.py  tabpfn_uri_space.py  tools_uri_space.py  trimp_uri_space.py
mytral/gpx_terrain/: __init__.py  coordinates.py  gltf_writer.py  gpx_worker.py  hgt_loader.py  map_tile.py  mesh_builder.py  terrain_service.py  tile_cache.py
mytral/import/: __init__.py
mytral/integrations/: concept2.py  fit_recording.py  garmin_user_archive.py  golden_cheetah_osf.py  google_sheets.py  gpx_recording.py  icommons.py  imytral.py  polar_hrm.py  strava.py  strava_user_archive.py  tcx_recording.py
mytral/metrics/: __init__.py  irm3d.py  irm3d_cache.py
mytral/middleware/: sync_guard.py
mytral/ml/: ml_models.py  sick_model.py
mytral/notifications/: __init__.py  _entities.py  _storage.py
mytral/recordings/: __init__.py  _geo_utils.py  _xml_utils.py  fit_extractor.py  gpx_extractor.py  models.py  parquet_converter.py  tcx_extractor.py
mytral/static/: font-awesome-a19d0c73b6.js  mytral-tabler.css  mytral.css
mytral/tasks/: __init__.py  _base.py  _entities.py  executor.py  locks.py  manager.py  storage.py
mytral/templates/: about.html  acoaching.html  active-in-week.html  activity-analysis-irm3d.html  activity-analysis-trimp.html  activity-analysis.html  activity-bookmarks.html  activity-create-comment.html  activity-create-meditation.html  activity-create-physio.html  activity-create-type.html  activity-create.html  activity-delete.html  activity-extend-date-range.html  activity-get.html  activity-junkyard.html  activity-list-diary.html  activity-list-prs.html  activity-list-races.html  activity-list-year.html  (+116 more)
snap/: snapcraft.yaml
tests/: _given.py  conftest.py  test_acoach_chats.py  test_activity_cadence.py  test_activity_photo_links.py  test_ai_context.py  test_ai_providers.py  test_ai_settings.py  test_anatomy.py  test_athlete_metrics.py  test_banister.py  test_benchmark_gpx_polyline.py  test_benchmark_parquet.py  test_benchmark_persistence.py  test_blobstore_filesystem.py  test_blobstore_minio.py  test_blobstore_s3.py  test_body_status.py  test_bookmarks.py  test_bulldozer.py  test_cache.py  test_cal.py  test_component_templates.py  test_dataset.py  test_dataset_json.py  test_exercise_photo_links.py  test_exercise_tags.py  test_fix_activities_1996_json.py  test_gear_component.py  test_gear_component_service_intervals.py  test_gear_photo_links.py  test_gear_tcoo.py  test_gear_with_components.py  test_goal_photo_links.py  test_golden_cheetah_osf.py  test_gpx_terrain.py  test_hr_zone_charts.py  test_irm3d.py  test_irm3d_cache.py  test_irm3d_route.py  (+46 more)
vibe/: .gitignore  COPILOT-INSTRUCTIONS.md
(+138 files in other folders)
